Load config from STDIN #364
preliminary refactoring